# pine-tails

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: general.yml
.sqlx/: query-330ebc21a56249429650be58449bdcd4b50ca85deee439a35f33218f453c6f08.json  query-4465b6b5ba9b6b13e501dad2d1dc96354d61739ccbc637d45a63914aa58f2e54.json  query-4f17c842c8407460631eca641dd51a5700463ba3d51a440c4fdaef2b9b9a87fe.json  query-7484765436efb23e94429c75713c2cdcb4923c54100174b2f82c63b6444270ab.json  query-799694629f49e3d784d8d7075485c6de5f7cf07e93dc83853f01b1abc3eb7e59.json  query-817ef869b16f8a8b9cd651868efa11317ed23f1bf24ba0ac20948f8cbd2da8ae.json  query-b5553c1bad472869968cc454fc79189e0762870a03c65ca026a2ea804a1279ec.json  query-c04ac61ef70aa6d078417091056515bfaa84a450735ed809ccb0493b7caf13f4.json  query-ebbc29ffb329374556970f8374c5db8199210544d9291743b9d42aa88508616f.json  query-edc6c5a87d455ddc491bf99cc390d42ed0f4f8a72a948c3ce516575f96cdf3c4.json  query-ee680af74a50d58dc24eb5dd132a98ca09a07494c37e0ac8134572849da24434.json  query-fc61bc6ed82cde507ffc34440b96e246e8b077199bd5d87bc20914d0dadf0555.json
configurations/: base.yaml  ci-base.yaml  local.yaml  production.yaml
dev-tools/: init_db.sh
migrations/: 20241023055452_create_users.sql  20241025232037_create_table_posts.sql  20241026025305_add_title_column_in_posts_table.sql  20241114020729_blob_column_add_in_table_posts.sql  20241118004107_blob_column_should_be_not_null.sql
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/components/: blob_storage.rs  email_delivery.rs  mod.rs
src/domain/: posts.rs  users.rs
src/routes/: health_check.rs  mod.rs  playground.rs  posts.rs
src/routes/posts/: count.rs  delete.rs  fetch.rs  mod.rs  update.rs  upload.rs
src/startup/: engine.rs  mod.rs  prepare.rs
tests/api/: api_test.rs  health_check.rs  playground.rs
tests/api/posts/: mod.rs
tests/api/utils/: email_service_mocking.rs  mod.rs
tests/data/dummy_markdown/: hello.md  without_metadata.md
tests/data/template/: template.md
tests/data/travel/: journal.md
tests/fake/: fake_posts.rs
