[package]
name = "pine-tails"
version = "0.1.4"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "pine_tails"

[[bin]]
path = "src/main.rs"
name = "flip_pine"

[dev-dependencies]
linkify = "0.10.0"
mail-parser = "0.9.4"
wiremock = "0.6"
fake = { version = "2.10", features = ["chrono-tz", "chrono"] }
reqwest = { version = "0.12.7", features = ["multipart", "stream"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tempfile = "3.13"

[dependencies]
# >>>>>>>>>>>>>>
# 1. Frameworks \
# <<<<<<<<<<<<<<<<
actix-web = "4.9.0"
actix-files = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# >>>>>>>>>>>>>>>>>>>>
# 2. Se/Derialization \
# <<<<<<<<<<<<<<<<<<<<<<
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yml = "0.0.12"

# >>>>>>>>>>>>>>>>>>>>>>>>>
# 3. Configuration Loading \
# <<<<<<<<<<<<<<<<<<<<<<<<<<<
config = "0.14"

# >>>>>>>>>>>
# 4. Logging \
# <<<<<<<<<<<<<
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
] }
tracing-actix-web = "0.7"
tracing-error = "0.2.0"
is-terminal = "0.4"

# >>>>>>>>
#  5.Util \
# <<<<<<<<<<
once_cell = "1"
secrecy = { version = "0.10", features = ["serde"] }
unicode-segmentation = "1.12"
reqwest = { version = "0.12.7", features = ["json"] }
base64 = "0.22"
lettre = "0.11"
regex = "1.11"
slug = "0.1.6"
actix-multipart = "0.7.2"
actix-cors = "0.7"

# >>>>>>>>>>>>>>>>>>
# 6. Error Handling \
# <<<<<<<<<<<<<<<<<<<<
anyhow = "1.0.89"
thiserror = "1.0.64"

# >>>>>>>>>>>>
# 7. Database \
# <<<<<<<<<<<<<<
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[[test]]
name = "api_test"
path = "tests/api/api_test.rs"

[[test]]
name = "fake_post"
path = "tests/fake/fake_posts.rs"
